# cfoo

./: CMakeLists.txt  README.md  id.h  scratch  todo.org
source/: main.c  tests.c
source/cfoo/: arg.c  arg.h  binding.c  binding.h  code.c  code.h  config.c  config.h  error.c  error.h  form.c  form.h  id.c  id.h  method.c  method.h  method_set.c  method_set.h  op.c  op.h  parse.c  parse.h  point.c  point.h  ret.c  ret.h  status.c  status.h  thread.c  thread.h  token.c  token.h  type.c  type.h  type_parent.c  type_parent.h  value.c  value.h
